--- a/app.nw/index.html
+++ b/app.nw/index.html
@@ -4,10 +4,11 @@
         <title></title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="index.css">
-        <!--<script src="http://yandex.st/jquery/1.8.2/jquery.min.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.0/backbone.localStorage-min.js"></script>-->
+        <script src="js/vendors/jquery.min.js"></script>
+        <script src="js/vendors/underscore.js"></script>
+        <script src="js/vendors/backbone.js"></script>
+        <script src="js/vendors/backbone.localStorage.js"></script>
+        <script src="index.lmd.js"></script>
 
     </head>
     <body>
@@ -60,8 +61,8 @@
                     </div>
                 </div>
                 <div class="b-sidebar__menu">
-                    <div class="b-menu-button">+</div>
-                    <div class="b-menu-button">&ndash;</div>
+                    <div class="b-menu-button js-add-project">+</div>
+                    <div class="b-menu-button js-remove-project">&ndash;</div>
                 </div>
             </div>
         </div>
@@ -98,7 +99,7 @@
                     </div>
                 </div>
 
-                <div class="b-navigate b-navigate_type_left">
+                <div class="b-navigate b-navigate_type_left i-hidden">
                     <div class="b-navigate__text">There will be all your projects and builds</div>
                     <img src="images/thin-arrow.svg">
                 </div>
